[package]
name = "web_scrapper__dom_emploi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
serde_json = "1.0"
